Fixed icons being covered with long entries in input forms
Added padding-right in input fields

--- a/src/app/components/auth-layouts/login-screen/login-form/login-form.component.scss
+++ b/src/app/components/auth-layouts/login-screen/login-form/login-form.component.scss
@@ -72,6 +72,7 @@
                 display: flex;
                 align-items: center;
                 font-size: 20px;
+                padding-right: 15%;
 
                 @media (max-width: 560px) {
                     width: 400px;
