--- a/src/app/components/auth-layouts/login-screen/sign-up-form/sign-up-form.component.scss
+++ b/src/app/components/auth-layouts/login-screen/sign-up-form/sign-up-form.component.scss
@@ -82,6 +82,7 @@
                 display: flex;
                 align-items: center;
                 font-size: 20px;
+                padding-right: 15%;
 
                 @media (max-width: 560px) {
                     width: 400px;
